samples/_failures_safe/1761656511_217d60_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b489bc45.c: In function ‘main’:
./samples/SAFE/__tmp_b489bc45.c:131:5: error: expected declaration or statement at end of input
  131 |     int choice;
      |     ^~~
